--- a/package.json
+++ b/package.json
@@ -54,9 +54,11 @@
     "next-intl": "^4.3.9",
     "node-fetch": "^3.3.2",
     "react": "19.1.0",
+    "react-360-view": "^0.1.3",
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "react-image-turntable": "^3.1.2",
     "react-toastify": "^11.0.5",
     "react-zoom-pan-pinch": "^3.7.0",
     "tailwind-merge": "^3.3.1",
