--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.8",
-    "typescript": "^5"
+    "typescript": "^5",
+    "xml-formatter": "^3.6.7"
   }
 }
