--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-360-view": "^0.1.3",
     "react-day-picker": "^9.11.0",
     "react-dom": "19.1.0",
+    "react-full-screen": "^1.1.1",
     "react-hook-form": "^7.63.0",
     "react-image-turntable": "^3.1.2",
     "react-toastify": "^11.0.5",
